# sre-inference-gateway

./: .coderabbit.yaml  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.prod.yml  docker-compose.yml  main.py  postman_collection.json  prometheus.yml  pyproject.toml  redis.conf  run_dev.py  test_gateway.py
.agent/rules/: commit.md  create-issue.md  rule-enforcement.md  start-issue.md  tech-stack.md
.agents/rules/: commit.md  create-issue.md  start-issue.md  tech-stack.md
app/: __init__.py  main.py
docs/: API_DEPENDENCIES.md  ARCHITECTURE.md  CONFIG_MODELS_API.md  CONFIG_MODELS_EXPORTS.md  CONFIG_MODELS_SIGNATURES.md  CONFIG_MODELS_SUMMARY.md  DESIGN.md  ENVIRONMENT.md  HEALTH_API.md  INCIDENT.md  MODELS.md  OPENAI_ADAPTER_API.md  OPENAI_ADAPTER_CHANGELOG.md  OPENAI_ADAPTER_EXAMPLES.md  OPENAI_ADAPTER_EXPORTS.md  OPENAI_ADAPTER_SIGNATURES.md  OPENAI_PROVIDER_SUMMARY.md  PROVIDERS.md  PROVIDER_FACTORY.md  PROVIDER_FACTORY_API_REFERENCE.md  PROVIDER_FACTORY_SUMMARY.md  REAL_PROVIDER_ADAPTERS.md  RESILIENCE_CONFIG.md  RESPONSE_MODELS.md  ROADMAP.md  TEST_CONFIG.md  TEST_REAL_PROVIDERS.md  TEST_RESILIENCE.md  TEST_VLLM_PROVIDER.md  VLLM_CPU_LIMITATIONS.md  VLLM_DOCKER_SETUP.md
examples/: resilience-config.yaml
infra/: docker-compose.prod.yml  docker-compose.yml  prometheus.yml  redis.conf
tests/: test_config.py  test_dependencies.py  test_gateway.py  test_health.py  test_main.py  test_providers.py  test_real_providers.py  test_resilience.py  test_response_models.py  test_router.py  test_vllm_provider.py
(+30 files in other folders)
